--- a/Client/src/pages/Login/styles.css
+++ b/Client/src/pages/Login/styles.css
@@ -12,24 +12,24 @@ h1 {
     justify-content: center;
 }
 
-.login-container section.login-form{
+.login-container section.form{
     width: 100%;
     max-width: 350px;
     margin-right: 30px;
 }
 
-.login-container section.login-form img{
+.login-container section.form img{
     width: 65%;
     margin-left: auto;
     margin-right: auto;
     display: block;
 }
 
-.login-container section.login-form form{
+.login-container section.form form{
     margin-top: 50px;
 }
 
-.login-container section.login-form form h1{
+.login-container section.form form h1{
     font-size: 32px;
     margin-bottom: 32px;
     text-align: center;
